intt